# train-db

./: .gitignore  Cargo.toml  IMPROVEMENT_ROADMAP.md  MULTI_DEVICE_TESTING.md  QUICK_WINS.md  README.md  demo.sh  demo_api.sh  demo_bluetooth.sh  demo_complete.sh  demo_connected_peers.sh  demo_dashboard_only.sh  demo_mesh.sh  demo_p2p_gossiping.sh  test_improved_connections.sh  test_multi_device.sh  test_p2p_gossiping.sh  test_p2p_with_data.sh
dashboard/: index.html
demo-data/: IDENTITY  LOG  LOG.old.1758477268852599  LOG.old.1758477299796891
demo-data-1/: IDENTITY  LOG  LOG.old.1758477098198546  LOG.old.1758477116463256  LOG.old.1758477172924776
demo-data-2/: IDENTITY  LOG  LOG.old.1758477172893946
device1-data/: 000056.sst  IDENTITY  LOG  LOG.old.1758484654616597  LOG.old.1758484865737676  LOG.old.1758484958847805  LOG.old.1758485200767751  LOG.old.1758485379839968  LOG.old.1758485382417644  LOG.old.1758485472513455  LOG.old.1758485477908194  LOG.old.1758485490187423  LOG.old.1758485494728982  LOG.old.1758485503692787  LOG.old.1758485514446029  LOG.old.1758485994573523  LOG.old.1758486004786439  LOG.old.1758486273184075  LOG.old.1758486287721742  LOG.old.1758486307684989  LOG.old.1758487009767885  LOG.old.1758487904634799  LOG.old.1758488235529440  LOG.old.1758488664293689  LOG.old.1758489203614691  LOG.old.1758489679201688  LOG.old.1758489928768583  LOG.old.1758490456647735  LOG.old.1758490963034053  LOG.old.1758491251870719  LOG.old.1758491654289286  MANIFEST-000053  MANIFEST-000062  MANIFEST-000078  MANIFEST-000086  MANIFEST-000102
device1-data.p2p/: IDENTITY  LOG  LOG.old.1758486287727363  LOG.old.1758486307691112  LOG.old.1758487009775608  LOG.old.1758487904641148  LOG.old.1758488235535988  LOG.old.1758488664300152  LOG.old.1758489203621508  LOG.old.1758489679208829  LOG.old.1758490456658882  LOG.old.1758490963040139  LOG.old.1758491251877292  LOG.old.1758491654295812
device2-data/: IDENTITY  LOG
docs/: README.md  _config.yml  demo_bluetooth.sh  index.html
examples/blocktrain-light-rpc-node/: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml
examples/blocktrain-light-rpc-node/src/: blockchain_state.rs  config.rs  lib.rs  main.rs  rpc_server.rs  sync_engine.rs  utils.rs
examples/blocktrain-light-rpc-node/src/transport/: bluetooth_transport.rs  http_transport.rs  mod.rs
examples/blocktrain-light-rpc-node/tests/: basic_usage.rs
src/: bluetooth.rs  cli.rs  dashboard.rs  main.rs  mesh_node.rs  network.rs  simple_node.rs  storage.rs
test-dashboard/: IDENTITY  LOG
test-data/: 000008.sst  IDENTITY  LOG  LOG.old.1758473687986439  LOG.old.1758473716031149
test-data2/: IDENTITY  LOG
test-p2p-1/: 000012.sst  000017.sst  IDENTITY  LOG  LOG.old.1758475461857407  LOG.old.1758475462632948  LOG.old.1758475465004398  LOG.old.1758475466523771  LOG.old.1758475490084660  MANIFEST-000027
test-p2p-2/: 000012.sst  000017.sst  IDENTITY  LOG  LOG.old.1758475463450077  LOG.old.1758475464217209  LOG.old.1758475465759447  LOG.old.1758475469567262  LOG.old.1758475490853223  MANIFEST-000027
