[package]
name = "train-db"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "P2P Decentralized Key-Value DB for hostile Network Conditions"
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# libp2p for P2P networking
libp2p = { version = "0.53", features = [
    "tcp",
    "mdns",
    "gossipsub",
    "identify",
    "ping",
    "noise",
    "yamux",
    "quic",
    "tokio",
] }

# RocksDB for persistent storage
rocksdb = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI interface
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.0"

# Bluetooth support (optional)
btleplug = { version = "0.11", optional = true }
hex = "0.4"
fastrand = "2.0"
async-trait = "0.1"
futures = "0.3"

# Additional dependencies
tempfile = "3.0"

# HTTP API
warp = "0.3"

[features]
default = []
bluetooth = ["btleplug"]
